Turned #defines into structs with static constant members. Decreased amount of global variables by putting them in structs (gWindows and gSettings) Put includes from main.cpp into main.h

--- a/resource.rc
+++ b/resource.rc
@@ -182,6 +182,7 @@ STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VIS
 CAPTION "Common Rcon Commands"
 FONT 8, "Ms Shell Dlg"
 {
+//TODO: Change this, Microsoft's compiler  truncates static control's texts after 256 chars.
     LTEXT   "sv (Prefix) - lets you use most of the in-game commands, including admin commands\r\n\
 Examples:\r\n\r\n\
 sv addip\r\n\
