--- a/resource.rc
+++ b/resource.rc
@@ -146,35 +146,37 @@ FONT 8, "Ms Shell Dlg"
     LTEXT           "", IDC_MROT_MAPSHOT, 178, 18, 170, 156, 0, SS_WHITERECT
 }
 
-IDD_PROGRAMSETTINGS DIALOG 0, 0, 280, 203
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
+IDD_PROGRAMSETTINGS DIALOG 0, 0, 280, 219
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
 CAPTION "Rconpanel - Settings"
 FONT 8, "Ms Shell Dlg"
 {
-	GROUPBOX        "Network", 0, 7, 7, 266, 48, 0, WS_EX_LEFT
-	LTEXT           "Time to wait for your servers to answer:", IDC_STATIC, 12, 18, 124, 8, SS_LEFT, WS_EX_LEFT
-	CONTROL         "", IDC_PS_TRACKOWNSERVERS, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 138, 14, 100, 15, WS_EX_LEFT
-	LTEXT           "1.000 s", IDC_PS_STATICOWNSERVERS, 243, 18, 24, 8, SS_LEFT, WS_EX_LEFT
-	LTEXT           "Time to wait for other servers to answer:", IDC_STATIC, 11, 33, 126, 8, SS_LEFT, WS_EX_LEFT
-	CONTROL         "", IDC_PS_TRACKOTHERSERVERS, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 138, 30, 100, 15, WS_EX_LEFT
-	LTEXT           "1.000 s", IDC_PS_STATICOTHERSERVERS, 243, 33, 24, 8, SS_LEFT, WS_EX_LEFT
-	
-	GROUPBOX        "Intervals", 0, 7, 60, 266, 51, 0, WS_EX_LEFT
-	LTEXT           "Checking interval for ID ban thread (if active):", IDC_STATIC, 13, 71, 144, 8, SS_LEFT, WS_EX_LEFT
-	EDITTEXT        IDC_PS_EDITBANINTERVAL, 160, 68, 38, 14, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
-	LTEXT           "seconds", 0, 201, 71, 28, 8, SS_LEFT, WS_EX_LEFT
-	AUTOCHECKBOX    "Automatically reload the players every:", IDC_PS_CHECKAUTORELOAD, 14, 89, 136, 8, 0, WS_EX_LEFT
-	EDITTEXT        IDC_PS_EDITAUTORELOAD, 160, 87, 38, 14, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
-	LTEXT           "seconds", 0, 201, 90, 28, 8, SS_LEFT, WS_EX_LEFT
-	
-    GROUPBOX        "Other settings", 0, 7, 116, 266, 61, 0, WS_EX_LEFT
+    GROUPBOX        "Network", 0, 7, 7, 266, 48, 0, WS_EX_LEFT
+    LTEXT           "Time to wait for your servers to answer:", IDC_STATIC, 12, 18, 124, 8, SS_LEFT, WS_EX_LEFT
+    CONTROL         "", IDC_PS_TRACKOWNSERVERS, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 138, 14, 100, 15, WS_EX_LEFT
+    LTEXT           "1.000 s", IDC_PS_STATICOWNSERVERS, 243, 18, 24, 8, SS_LEFT, WS_EX_LEFT
+    LTEXT           "Time to wait for other servers to answer:", IDC_STATIC, 11, 33, 126, 8, SS_LEFT, WS_EX_LEFT
+    CONTROL         "", IDC_PS_TRACKOTHERSERVERS, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 138, 30, 100, 15, WS_EX_LEFT
+    LTEXT           "1.000 s", IDC_PS_STATICOTHERSERVERS, 243, 33, 24, 8, SS_LEFT, WS_EX_LEFT
+    
+    GROUPBOX        "Intervals", 0, 7, 60, 266, 51, 0, WS_EX_LEFT
+    LTEXT           "Checking interval for ID ban thread (if active):", IDC_STATIC, 13, 71, 144, 8, SS_LEFT, WS_EX_LEFT
+    EDITTEXT        IDC_PS_EDITBANINTERVAL, 160, 68, 38, 14, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
+    LTEXT           "seconds", 0, 201, 71, 28, 8, SS_LEFT, WS_EX_LEFT
+    AUTOCHECKBOX    "Automatically reload the players every:", IDC_PS_CHECKAUTORELOAD, 14, 89, 136, 8, 0, WS_EX_LEFT
+    EDITTEXT        IDC_PS_EDITAUTORELOAD, 160, 87, 38, 14, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
+    LTEXT           "seconds", 0, 201, 90, 28, 8, SS_LEFT, WS_EX_LEFT
+    
+    GROUPBOX        "Other settings", 0, 7, 116, 266, 77, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Limit console line count to:", IDC_PS_CHECKLINECOUNT, 14, 128, 100, 8, 0, WS_EX_LEFT
     EDITTEXT        IDC_PS_EDITLINECOUNT, 115, 125, 38, 14, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
     AUTOCHECKBOX    "Color the row backgrounds in the player's team colors.", IDC_PS_CHECKCOLORPLAYERS, 14, 144, 185, 8, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Color the pings from green to red", IDC_PS_CHECKCOLORPINGS, 14, 160, 118, 8, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Don't show the lower part of the GUI (manual RCON communication)", IDC_PS_CHECKDISABLECONSOLE, 14, 176, 231, 8, 0, WS_EX_LEFT
     
-    DEFPUSHBUTTON   "OK", IDC_PS_BUTTONOK, 223, 182, 50, 14, 0, WS_EX_LEFT
-    PUSHBUTTON      "Cancel", IDC_PS_BUTTONCANCEL, 168, 182, 50, 14, 0, WS_EX_LEFT
+    DEFPUSHBUTTON   "OK", IDC_PS_BUTTONOK, 223, 198, 50, 14, 0, WS_EX_LEFT
+    PUSHBUTTON      "Cancel", IDC_PS_BUTTONCANCEL, 168, 198, 50, 14, 0, WS_EX_LEFT
 }
 
 IDD_RCONCOMMANDS DIALOG 0, 0, 332, 238
