--- a/PB2-Rconpanel.vcxproj
+++ b/PB2-Rconpanel.vcxproj
@@ -193,6 +193,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\async_repeated_timer.h" />
+    <ClInclude Include="include\color.h" />
     <ClInclude Include="include\main.h" />
     <ClInclude Include="include\pb2lib.h" />
     <ClInclude Include="include\resource.h" />
