--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -159,13 +159,13 @@ FONT 8, "Ms Shell Dlg"
     PUSHBUTTON      "Cancel", IDC_PS_BUTTONCANCEL, 168, 198, 50, 14, 0, WS_EX_LEFT
 }
 
-IDD_RCONCOMMANDS DIALOG 0, 0, 332, 238
+IDD_RCONCOMMANDS DIALOG 0, 0, 300, 210
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
 CAPTION "Common Rcon Commands"
-FONT 8, "Ms Shell Dlg"
+FONT 9, "Consolas"
 {
 	// Text is set in OnRCONCommandsInitDialog because the microsoft .rc compiler truncates text here.
-    LTEXT   "", IDC_RCONCOMMANDS_INFOTEXT, 7, 7, 318, 224, SS_LEFT
+    LTEXT   "", IDC_RCONCOMMANDS_INFOTEXT, 7, 5, 318, 224, SS_LEFT
 }
 
 IDD_SETPING DIALOG 0, 0, 151, 47
