Update forcejoin dialog

--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -56,18 +56,22 @@ FONT 8, "Ms Shell Dlg"
 	PUSHBUTTON		"Save", IDC_DM_BUTTONSAVE, 227, 154, 49, 14
 	PUSHBUTTON		"OK", IDC_DM_BUTTONOK, 284, 184, 51, 14
 	CONTROL			"0.0.0.0", IDC_DM_IP, WC_IPADDRESS, WS_TABSTOP, 46, 153, 90, 15
-	EDITTEXT		IDC_DM_EDITPORT, 140, 153, 25, 14, ES_NUMBER, WS_EX_CLIENTEDGE
-	EDITTEXT		IDC_DM_EDITPW, 46, 173, 119, 14, ES_AUTOHSCROLL | ES_PASSWORD, WS_EX_CLIENTEDGE
+	EDITTEXT		IDC_DM_EDITPORT, 140, 153, 25, 11, ES_NUMBER, WS_EX_CLIENTEDGE
+	EDITTEXT		IDC_DM_EDITPW, 46, 173, 119, 11, ES_AUTOHSCROLL | ES_PASSWORD, WS_EX_CLIENTEDGE
 }
 
-IDD_FORCEJOIN DIALOG 0, 0, 138, 95
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+IDD_FORCEJOIN DIALOG 0, 0, 174, 57
+STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
 CAPTION "Forcejoin - Pick Color"
-FONT 8, "Ms Shell Dlg"
+FONT 9, "Segoe UI"
 {
-    DEFPUSHBUTTON   "Choose", IDC_FJ_OK, 81, 7, 50, 14
-    PUSHBUTTON      "Cancel", IDC_FJ_CANCEL, 81, 23, 50, 14
-    LISTBOX         IDC_FJ_COLORLIST, 7, 7, 69, 81, WS_TABSTOP | LBS_NOINTEGRALHEIGHT | LBS_NOTIFY, WS_EX_CLIENTEDGE
+    PUSHBUTTON      " &Red", IDC_FJ_BUTTONRED, 7, 7, 50, 12
+    PUSHBUTTON      " &Blue", IDC_FJ_BUTTONBLUE, 7, 21, 50, 12
+    PUSHBUTTON      " &Purple", IDC_FJ_BUTTONPURPLE, 62, 7, 50, 12
+    PUSHBUTTON      " &Yellow", IDC_FJ_BUTTONYELLOW, 62, 21, 50, 12
+    PUSHBUTTON      "&Auto", IDC_FJ_BUTTONAUTO, 117, 7, 50, 12
+    PUSHBUTTON      " &Observer", IDC_FJ_BUTTONOBSERVER, 117, 21, 50, 12
+    DEFPUSHBUTTON   "&Cancel", IDCANCEL, 117, 38, 50, 12
 }
 
 IDD_MANAGEIPS DIALOG 0, 0, 170, 204
@@ -95,15 +99,6 @@ FONT 8, "Ms Shell Dlg"
     PUSHBUTTON      "Remove", IDC_MIDS_BUTTONREMOVE, 120, 58, 50, 14
     PUSHBUTTON      "Save", IDC_MIDS_BUTTONSAVE, 120, 77, 50, 14
     DEFPUSHBUTTON   "OK", IDC_MIDS_BUTTONOK, 120, 133, 50, 14
-}
-
-IDD_MANAGECVARS DIALOG 0, 0, 216, 235
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
-CAPTION "Manage CVars"
-FONT 8, "Ms Shell Dlg"
-{
-    DEFPUSHBUTTON   "OK", IDC_MCVARS_BUTTONOK, 159, 214, 50, 14
-    CONTROL         "", IDC_MCVARS_LISTVIEW, WC_LISTVIEW, WS_TABSTOP | WS_BORDER | LVS_ALIGNLEFT | LVS_REPORT | LVS_EDITLABELS, 7, 7, 202, 202
 }
 
 IDD_MANAGEROTATION DIALOG 0, 0, 360, 260
