--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -86,19 +86,20 @@ FONT 8, "Ms Shell Dlg"
     DEFPUSHBUTTON   "OK", IDC_MIPS_BUTTONOK, 113, 183, 50, 14
 }
 
-IDD_MANAGEIDS DIALOG 0, 0, 177, 154
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+IDD_MANAGEIDS DIALOG 0, 0, 338, 242
+STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
 CAPTION "Manage AutoKick IDs / Names"
-FONT 8, "Ms Shell Dlg"
+FONT 9, "Segoe UI"
 {
-    LISTBOX         IDC_MIDS_LIST, 7, 7, 97, 140, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY
-    EDITTEXT        IDC_MIDS_EDIT, 109, 7, 61, 14, ES_AUTOHSCROLL
-    AUTORADIOBUTTON "name", IDC_MIDS_RADIONAME, 137, 26, 33, 8
-    AUTORADIOBUTTON "ID", IDC_MIDS_RADIOID, 109, 26, 23, 8
-    PUSHBUTTON      "Add", IDC_MIDS_BUTTONADD, 120, 39, 50, 14
-    PUSHBUTTON      "Remove", IDC_MIDS_BUTTONREMOVE, 120, 58, 50, 14
-    PUSHBUTTON      "Save", IDC_MIDS_BUTTONSAVE, 120, 77, 50, 14
-    DEFPUSHBUTTON   "OK", IDC_MIDS_BUTTONOK, 120, 133, 50, 14
+    LISTBOX         IDC_MIDS_LIST, 7, 7, 159, 228, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_LEFT
+    GROUPBOX        "Auto-Kick Entry", IDC_STATIC, 171, 87, 160, 50
+    EDITTEXT        IDC_MIDS_EDIT, 177, 98, 149, 12, ES_AUTOHSCROLL
+    AUTORADIOBUTTON "DPLogin ID", IDC_MIDS_RADIOID, 177, 115, 76, 8
+    AUTORADIOBUTTON "Player name", IDC_MIDS_RADIONAME, 177, 125, 76, 8
+    PUSHBUTTON      "&Add", IDC_MIDS_BUTTONADD, 171, 142, 50, 12
+    PUSHBUTTON      "&Overwrite", IDC_MIDS_BUTTONOVERWRITE, 226, 142, 50, 12
+    PUSHBUTTON      "&Remove", IDC_MIDS_BUTTONREMOVE, 281, 142, 50, 12
+    DEFPUSHBUTTON   "&Close", IDCANCEL, 281, 223, 50, 12
 }
 
 IDD_MANAGEROTATION DIALOG 0, 0, 360, 260
