Update banned IPs dialog

--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -74,16 +74,16 @@ FONT 9, "Segoe UI"
     DEFPUSHBUTTON   "&Cancel", IDCANCEL, 117, 38, 50, 12
 }
 
-IDD_MANAGEIPS DIALOG 0, 0, 170, 204
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+IDD_MANAGEIPS DIALOG 0, 0, 245, 236
+STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
 CAPTION "Manage Banned IPs"
-FONT 8, "Ms Shell Dlg"
+FONT 9, "Segoe UI"
 {
-    LISTBOX         IDC_MIPS_LIST, 7, 7, 156, 150, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY
-    CONTROL         "", IDC_MIPS_IPCONTROL, WC_IPADDRESS, WS_TABSTOP, 7, 162, 156, 15
-    PUSHBUTTON      "Add IP", IDC_MIPS_BUTTONADD, 7, 183, 50, 14
-    PUSHBUTTON      "Remove IP", IDC_MIPS_BUTTONREMOVE, 60, 183, 50, 14
-    DEFPUSHBUTTON   "OK", IDC_MIPS_BUTTONOK, 113, 183, 50, 14
+    LISTBOX         IDC_MIPS_LIST, 7, 7, 121, 222, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY
+    CONTROL         "", IDC_MIPS_IPCONTROL, WC_IPADDRESS, WS_TABSTOP, 133, 105, 105, 12
+    PUSHBUTTON      "&Add", IDC_MIPS_BUTTONADD, 133, 119, 50, 12
+    PUSHBUTTON      "&Remove", IDC_MIPS_BUTTONREMOVE, 188, 119, 50, 12
+    DEFPUSHBUTTON   "&Close", IDCANCEL, 188, 217, 50, 12, 0
 }
 
 IDD_MANAGEIDS DIALOG 0, 0, 338, 242
