Update rotation dialog

--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -102,24 +102,24 @@ FONT 9, "Segoe UI"
     DEFPUSHBUTTON   "&Close", IDCANCEL, 281, 223, 50, 12
 }
 
-IDD_MANAGEROTATION DIALOG 0, 0, 360, 260
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+IDD_MANAGEROTATION DIALOG 0, 0, 378, 270
+STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
 CAPTION "Manage Rotation"
-FONT 8, "Ms Shell Dlg"
+FONT 9, "Segoe UI"
 {
-    DEFPUSHBUTTON   "OK", IDC_MROT_BUTTONOK, 303, 239, 50, 14
-    GROUPBOX        "Maplist", IDC_STATIC, 8, 7, 155, 246
-    GROUPBOX        "Rotation file", IDC_STATIC, 172, 185, 181, 49
-    LISTBOX         IDC_MROT_LIST, 14, 18, 143, 192, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY
-    PUSHBUTTON      "Add", IDC_MROT_BUTTONADD, 14, 234, 45, 14
-    PUSHBUTTON      "Clear", IDC_MROT_BUTTONCLEAR, 64, 234, 44, 14
-    EDITTEXT        IDC_MROT_EDITMAP, 14, 215, 143, 14, ES_AUTOHSCROLL
-    PUSHBUTTON      "Remove", IDC_MROT_BUTTONREMOVE, 113, 234, 44, 14
-    EDITTEXT        IDC_MROT_EDITFILE, 178, 196, 168, 14, ES_AUTOHSCROLL
-    PUSHBUTTON      "Save", IDC_MROT_BUTTONWRITE, 178, 215, 82, 14
-    PUSHBUTTON      "Load", IDC_MROT_BUTTONREAD, 264, 215, 82, 14
-    GROUPBOX        "Mapshot", IDC_STATIC, 172, 7, 181, 173
-    LTEXT           "", IDC_MROT_MAPSHOT, 178, 18, 170, 156, 0, SS_WHITERECT
+    GROUPBOX        "Maplist", IDC_STATIC, 7, 7, 156, 256
+    LISTBOX         IDC_MROT_LIST, 14, 18, 143, 195, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY
+    EDITTEXT        IDC_MROT_EDITMAP, 14, 215, 143, 12, ES_AUTOHSCROLL
+    PUSHBUTTON      "&Add", IDC_MROT_BUTTONADD, 31, 229, 50, 12
+    PUSHBUTTON      "&Remove", IDC_MROT_BUTTONREMOVE, 86, 229, 50, 12
+    PUSHBUTTON      "Remove all maps", IDC_MROT_BUTTONCLEAR, 41, 246, 85, 12
+    GROUPBOX        "Mapshot", IDC_STATIC, 172, 7, 199, 171
+    LTEXT           "", IDC_MROT_MAPSHOT, 178, 18, 187, 156
+    GROUPBOX        "Rotation file", IDC_STATIC, 172, 185, 199, 45
+    EDITTEXT        IDC_MROT_EDITFILE, 178, 196, 187, 12, ES_AUTOHSCROLL
+    PUSHBUTTON      "&Save to file", IDC_MROT_BUTTONWRITE, 215, 210, 50, 12
+    PUSHBUTTON      "&Load from file", IDC_MROT_BUTTONREAD, 270, 210, 58, 12
+    DEFPUSHBUTTON   "&Close", IDCANCEL, 321, 251, 50, 12
 }
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
