--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -160,15 +160,16 @@ FONT 9, "Segoe UI"
     DEFPUSHBUTTON   "&Close", IDCANCEL, 262, 212, 50, 12
 }
 
-IDD_SETPING DIALOG 0, 0, 151, 47
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
+IDD_SETPING DIALOG 0, 0, 173, 65
+STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
 CAPTION "Set Maximum Ping"
-FONT 8, "Ms Shell Dlg"
+FONT 9, "Segoe UI"
 {
-    EDITTEXT        IDC_SP_EDIT, 104, 7, 40, 14, ES_NUMBER
-    PUSHBUTTON      "Cancel", IDC_SP_BUTTONCANCEL, 39, 26, 50, 14
-    DEFPUSHBUTTON   "OK", IDC_SP_BUTTONOK, 94, 26, 50, 14
-    LTEXT           "maximum ping (0 = unlimited):", IDC_STATIC, 7, 10, 92, 8, SS_LEFT
+    CTEXT           "Maximum allowed ping (0 = unlimited):", IDC_STATIC, 7, 10, 159, 8, SS_CENTER
+    EDITTEXT        IDC_SP_EDIT, 41, 24, 40, 12, ES_NUMBER
+    LTEXT           "milliseconds", IDC_STATIC, 86, 26, 46, 8
+    PUSHBUTTON      "Cancel", IDCANCEL, 34, 46, 50, 12
+    DEFPUSHBUTTON   "OK", IDC_SP_BUTTONOK, 89, 46, 50, 12
 }
 
 VS_VERSION_INFO VERSIONINFO
