Update manage servers dialog

--- a/resources/resource.rc
+++ b/resources/resource.rc
@@ -39,25 +39,25 @@ IDM MENU
 	}
 }
 
-IDD_MANAGESERVERS DIALOG 0, 0, 342, 205
-STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_VISIBLE
-	| WS_POPUP | WS_SYSMENU | WS_CHILD
+// TODO: Remove meaningless "manage" from names
+IDD_MANAGESERVERS DIALOG 0, 0, 401, 269
+STYLE DS_CENTER | DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_VISIBLE | WS_POPUP | WS_SYSMENU
 CAPTION "Manage Servers"
-FONT 8, "Ms Shell Dlg"
+FONT 9, "Segoe UI"
 {
-	LTEXT			"Serverbrowser", IDC_STATIC, 8, 7, 46, 8, SS_LEFT
-	LTEXT			"Saved servers", IDC_STATIC, 170, 7, 46, 8, SS_LEFT
-	LTEXT			"Address:", IDC_STATIC, 8, 157, 37, 8, SS_LEFT
-	LTEXT			"Password:", IDC_STATIC, 7, 176, 34, 8, SS_LEFT
-	LISTBOX			IDC_DM_LISTLEFT, 7, 15, 158, 133, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_CLIENTEDGE
-	LISTBOX			IDC_DM_LISTRIGHT, 170, 15, 165, 133, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_CLIENTEDGE
-	PUSHBUTTON		"Add", IDC_DM_BUTTONADD, 170, 153, 52, 14
-	PUSHBUTTON		"Remove", IDC_DM_BUTTONREMOVE, 281, 154, 54, 14
-	PUSHBUTTON		"Save", IDC_DM_BUTTONSAVE, 227, 154, 49, 14
-	PUSHBUTTON		"OK", IDC_DM_BUTTONOK, 284, 184, 51, 14
-	CONTROL			"0.0.0.0", IDC_DM_IP, WC_IPADDRESS, WS_TABSTOP, 46, 153, 90, 15
-	EDITTEXT		IDC_DM_EDITPORT, 140, 153, 25, 11, ES_NUMBER, WS_EX_CLIENTEDGE
-	EDITTEXT		IDC_DM_EDITPW, 46, 173, 119, 11, ES_AUTOHSCROLL | ES_PASSWORD, WS_EX_CLIENTEDGE
+    GROUPBOX        "Server Browser", IDC_STATIC, 7, 7, 191, 255
+    LISTBOX         IDC_DM_LISTLEFT, 13, 18, 180, 239, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_CLIENTEDGE
+    GROUPBOX        "Saved Servers", IDC_STATIC, 203, 7, 191, 238
+    LISTBOX         IDC_DM_LISTRIGHT, 209, 18, 180, 171, WS_TABSTOP | WS_VSCROLL | LBS_NOINTEGRALHEIGHT | LBS_SORT | LBS_NOTIFY, WS_EX_CLIENTEDGE
+    LTEXT           "Address:", IDC_STATIC, 209, 196, 37, 8
+    CONTROL         "0.0.0.0", IDC_DM_IP, WC_IPADDRESS, WS_TABSTOP, 248, 194, 105, 12
+    EDITTEXT        IDC_DM_EDITPORT, 355, 194, 34, 12, ES_NUMBER, WS_EX_CLIENTEDGE
+    LTEXT           "Password:", IDC_STATIC, 209, 213, 34, 8
+    EDITTEXT        IDC_DM_EDITPW, 248, 211, 141, 12, ES_AUTOHSCROLL | ES_PASSWORD, WS_EX_CLIENTEDGE
+    PUSHBUTTON      "&Add", IDC_DM_BUTTONADD, 220, 228, 50, 12
+    PUSHBUTTON      "&Overwrite", IDC_DM_BUTTONSAVE, 275, 228, 50, 12
+    PUSHBUTTON      "&Remove", IDC_DM_BUTTONREMOVE, 330, 228, 50, 12
+    DEFPUSHBUTTON   "&Close", IDCANCEL, 344, 250, 50, 12
 }
 
 IDD_FORCEJOIN DIALOG 0, 0, 174, 57
@@ -148,7 +148,6 @@ FONT 9, "Segoe UI"
     PUSHBUTTON      "Cancel", IDCANCEL, 168, 172, 50, 12
     DEFPUSHBUTTON   "OK", IDC_PS_BUTTONOK, 223, 172, 50, 12
 }
-
 
 // Text is set in OnRCONCommandsInitDialog because the microsoft .rc compiler truncates text here.
 IDD_RCONCOMMANDS DIALOG 0, 0, 319, 231
